feat: add class containing userid and datetime for tracks in playlists
